--- a/new-shopping-cart/package.json
+++ b/new-shopping-cart/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.0.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-firebaseui": "^4.0.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
@@ -27,5 +29,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
